syntax = "proto3";

package types;

enum TransactionStatusReason {
    OK = 0;
    CUSTOMER_IS_SELLER = 1;
    ALREADY_PROCESSED = 2;
    COUNT_OUT_OF_BOUNDS = 3;
    AMOUNT_OUT_OF_BOUNDS = 4;
    SELLER_MISSING_GOODS = 5;
    CUSTOMER_MISSING_MONEY = 6;
    CUSTOMER_MISSING = 7;
    SELLER_MISSING = 8;
    MULTIPLE_PRODUCTS = 9;
    PREFECTURES_DO_NOT_MATCH = 10;
}

message Transaction {
    uint64 seller_bank_account_id = 1;
    uint64 customer_bank_account_id = 2;

    string product = 3;
    int32 count = 4;
    int32 amount = 5;

    enum Status {
        CREATED = 0;
        REJECTED = 1;
        ACCEPTED = 2;
    }
    Status status = 6;

    uint64 transaction_id = 7;
    string updated_at = 9;
    string created_at = 10;
    string side = 11;

    bool is_money = 12;
}
